@@ -1,4 +1,4 @@
-.TH HDPARM 8 "July 2009" "Version 9.20"
+.TH HDPARM 8 "July 2009" "Version 9.21"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
